--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.3.2",
     "framer-motion": "^12.23.12",
     "geist": "^1.4.2",
+    "lucide-react": "^0.552.0",
     "next": "15.4.6",
     "nodemailer": "^7.0.5",
     "razorpay": "^2.9.6",
