--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@vercel/analytics": "^1.5.0",
+    "cloudinary": "^2.8.0",
     "framer-motion": "^12.23.12",
     "geist": "^1.4.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.552.0",
+    "mogoose": "^0.0.1-security",
+    "mongodb": "^7.0.0",
+    "mongoose": "^8.19.3",
     "next": "15.4.6",
     "nodemailer": "^7.0.5",
     "razorpay": "^2.9.6",
