--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.19.3",
     "next": "15.4.6",
     "nodemailer": "^7.0.5",
+    "pdfkit": "^0.17.2",
     "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
