--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "geist": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.552.0",
-    "mogoose": "^0.0.1-security",
     "mongodb": "^7.0.0",
     "mongoose": "^8.19.3",
     "next": "15.4.6",
     "nodemailer": "^7.0.5",
     "pdfkit": "^0.13.0",
+    "pg-sdk-node": "https://phonepe.mycloudrepo.io/public/repositories/phonepe-pg-sdk-node/releases/v2/phonepe-pg-sdk-node.tgz",
     "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
