--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lucide-react": "^0.552.0",
     "mongodb": "^7.0.0",
     "mongoose": "^8.19.3",
-    "next": "15.4.6",
+    "next": "^15.5.6",
     "nodemailer": "^7.0.5",
     "pdfkit": "^0.13.0",
     "pg-sdk-node": "https://phonepe.mycloudrepo.io/public/repositories/phonepe-pg-sdk-node/releases/v2/phonepe-pg-sdk-node.tgz",
